fix z-index of menu, fix scaling on portrait tablet

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -185,7 +185,7 @@ h2{
     top:0;
     right:0;
     left:0;
-    z-index: 4;
+    z-index: 11;
     color: $lightFont;
 
     @media (max-width: 768px) //so the headeer doesn't get lost in the background image
